--- a/Pràctica7.RA2/Act-2/Index.html
+++ b/Pràctica7.RA2/Act-2/Index.html
@@ -25,6 +25,8 @@
             <button class="Menu">Menu 2</button>
         </div>
     </div>
-    <button id="visible">Element visible</button>
+    <div id="visible">
+        <p>Element visible</p>
+    </div>
 </body>
 </html>
